--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -82,11 +82,10 @@ public without sharing class AccountTriggerHandler {
 
 
             // Make sure we can update the database before even trying
-            if (!Schema.sObjectType.Account.fields.Vendedor__c.isUpdateable()) {
-                return null;
+            if (Schema.sObjectType.Account.fields.Vendedor__c.isUpdateable()) {
+                update accountsToUpdate;
             }
 
-            update accountsToUpdate;
 
         }
         catch(Exception e)
