--- a/force-app/main/default/classes/TestAccountTrigger.cls
+++ b/force-app/main/default/classes/TestAccountTrigger.cls
@@ -4,7 +4,13 @@ public with sharing class TestAccountTrigger {
     public static void testInsertGoldAccount(){
         List<Account> accountsToInsert =  AccountDataFactory.createAccounts(1,'Ouro');
 
+        List<Vendedor__c> vendedores = new List<Vendedor__c>();
+
+        vendedores.addAll(VendedorDataFactory.criarVendedoresInternos(1));
+        vendedores.addAll(VendedorDataFactory.criarVendedoresExternos(1));
+
         Test.startTest();
+        insert vendedores;
         insert accountsToInsert;
 
         Account[] assertAccount = [SELECT Id,QualificacaoCliente__c FROM Account WHERE QualificacaoCliente__c = 'Ouro'];
