--- a/force-app/main/default/classes/AccountDataFactory.cls
+++ b/force-app/main/default/classes/AccountDataFactory.cls
@@ -5,7 +5,7 @@ public with sharing class AccountDataFactory {
         List<Account> accounts = new List<Account>();
         
         for(Integer i=0;i<noOfAccountsToCreate;i++){
-            Account acc = new Account(Name = 'Test' + i);
+            Account acc = new Account(Name = 'Test' + i,CEP__c = '13801035');
             acc.QualificacaoCliente__c = qualification;
             accounts.add(acc);
         }
