--- a/force-app/main/default/classes/TestAccountTrigger.cls
+++ b/force-app/main/default/classes/TestAccountTrigger.cls
@@ -1,23 +1,45 @@
 @isTest
 public with sharing class TestAccountTrigger {
     @isTest
-    public static void testInsertGoldAccount(){
+    public static void testInsertOuroAccount(){
         List<Account> accountsToInsert =  AccountDataFactory.createAccounts(1,'Ouro');
 
         List<Vendedor__c> vendedores = new List<Vendedor__c>();
 
-        vendedores.addAll(VendedorDataFactory.criarVendedoresInternos(1));
-        vendedores.addAll(VendedorDataFactory.criarVendedoresExternos(1));
-
+        vendedores.addAll(VendedorDataFactory.criarVendedores(1,'Interno'));
+        
         Test.startTest();
         insert vendedores;
         insert accountsToInsert;
 
-        Account[] assertAccount = [SELECT Id,QualificacaoCliente__c FROM Account WHERE QualificacaoCliente__c = 'Ouro'];
+        Account[] assertAccount = [SELECT Id,QualificacaoCliente__c,Vendedor__c FROM Account WHERE QualificacaoCliente__c = 'Ouro'];
+        Vendedor__c [] vendedor = [SELECT Id FROM Vendedor__C WHERE RecordTypeId = '012Dn000000Zxc0IAC'];
 
         Test.stopTest();
 
-        System.assertNotEquals(null, assertAccount[0].Vendedor__c,'Vendedor da Conta não foi atualizada');
+        System.assertEquals(vendedor[0].Id, assertAccount[0].Vendedor__c,'Vendedor da Conta não foi atualizada');
+        
+
+    }
+
+    @isTest
+    public static void testInsertBronzeAccount(){
+        List<Account> accountsToInsert =  AccountDataFactory.createAccounts(1,'Bronze');
+
+        List<Vendedor__c> vendedores = new List<Vendedor__c>();
+
+        vendedores.addAll(VendedorDataFactory.criarVendedores(1,'Externo'));
+        
+        Test.startTest();
+        insert vendedores;
+        insert accountsToInsert;
+
+        Account[] assertAccount = [SELECT Id,QualificacaoCliente__c,Vendedor__c FROM Account WHERE QualificacaoCliente__c = 'Bronze'];
+        Vendedor__c [] vendedor = [SELECT Id FROM Vendedor__C WHERE RecordTypeId = '012Dn000000Zxc5IAC'];
+
+        Test.stopTest();
+
+        System.assertEquals(vendedor[0].Id, assertAccount[0].Vendedor__c,'Vendedor da Conta não foi atualizada');
         
 
     }
