--- a/force-app/main/default/classes/VendedorDataFactory.cls
+++ b/force-app/main/default/classes/VendedorDataFactory.cls
@@ -1,11 +1,18 @@
 public with sharing class VendedorDataFactory {
-    public static List<Vendedor__c> criarVendedoresInternos(Integer numeroVendedorCriar) {
+    public static List<Vendedor__c> criarVendedores(Integer numeroVendedorCriar, String tipoVendedor) {
 
         List<Vendedor__c> vendedores = new List<Vendedor__c>();
+
+        string recordTypeParaCriar ;
+        if(tipoVendedor == 'Interno'){
+            recordTypeParaCriar = '012Dn000000Zxc0IAC';
+        }else{
+             recordTypeParaCriar = '012Dn000000Zxc5IAC';
+        } 
         
         for(Integer i=0;i<numeroVendedorCriar;i++){
 
-            Vendedor__c vendedor = new Vendedor__c(Name = 'Test Interno' + i,Email__c = 'pwferreira.info@gmail.com', RecordTypeId = '012Dn000000Zxc0IAC');
+            Vendedor__c vendedor = new Vendedor__c(Name = 'Test ' + tipoVendedor + ' ' +  i,Email__c = 'pwferreira.info@gmail.com', RecordTypeId = recordTypeParaCriar);
             vendedores.add(vendedor);
         }
 
@@ -13,17 +20,5 @@ public with sharing class VendedorDataFactory {
 
     }
 
-    public static List<Vendedor__c> criarVendedoresExternos(Integer numeroVendedorCriar) {
-
-        List<Vendedor__c> vendedores = new List<Vendedor__c>();
-        
-        for(Integer i=0;i<numeroVendedorCriar;i++){
-
-            Vendedor__c vendedor = new Vendedor__c(Name = 'Test Externo' + i,Email__c = 'pwferreira.info@gmail.com', RecordTypeId = '012Dn000000Zxc5IAC');
-            vendedores.add(vendedor);
-        }
-
-        return vendedores;
-
-    }
+    
 }
