Implementado metodo splitList e desenvolvido enqueueJob no UpdateAddress

--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -4,39 +4,39 @@ public without sharing class AccountTriggerHandler {
         
         setVendedor(newAccounts);
     }
-
+    
     public static void isAfterInsert(Account [] newAccounts, Map<Id,Account> newAccountsMap,Map<Id,Account> oldAccountsMap ){
     }
-
+    
     //public static void isBeforeUpdate(Account [] newAccounts, Map<Id,Account> newAccountsMap,Map<Id,Account> oldAccountsMap ){
     //}
-
+    
     public static void isAfterUpdate(Account [] newAccounts, Map<Id,Account> newAccountsMap,Map<Id,Account> oldAccountsMap ){
     }
-
+    
     public static Set<String> setRecordTypes(Account [] newAccounts){
         
         Set<String> recordTypeVendedor = new Set<String>();
-
+        
         for(Account newAcccount : newAccounts){
             
             if(newAcccount.QualificacaoCliente__c == 'Ouro' ){
                 recordTypeVendedor.add('Interno');
             }
-
+            
             if(newAcccount.QualificacaoCliente__c == 'Prata' ){
                 recordTypeVendedor.add('Todos');
             }
-
+            
             if(newAcccount.QualificacaoCliente__c == 'Bronze' ){
                 recordTypeVendedor.add('Externo');
             }
-
             
-
+            
+            
         }
         return recordTypeVendedor;
-
+        
     }
     
     public static void setVendedor(Account [] newAccounts){
@@ -47,44 +47,44 @@ public without sharing class AccountTriggerHandler {
             Set<String> recordTypeVendedor = setRecordTypes(newAccounts);
             
             Map<String,Map<Id,Integer>> mapVendedoresQuantidades = new Map<String,Map<Id,Integer>>();
-
+            
             if(recordTypeVendedor.contains('Interno')){
                 
                 Map<Id,Integer> vendedoresInternos = getVendedor('Interno');
                 mapVendedoresQuantidades.put('Interno',vendedoresInternos);
-
+                
             }
-
+            
             if(recordTypeVendedor.contains('Externo')){
                 
                 Map<Id,Integer> vendedoresExternos = getVendedor('Externo');
                 mapVendedoresQuantidades.put('Externo',vendedoresExternos);
-
+                
             }
-
+            
             if(recordTypeVendedor.contains('Todos')){
                 
                 Map<Id,Integer> todosVendedores = getVendedor('Todos');
                 mapVendedoresQuantidades.put('Todos',todosVendedores);
-
+                
             }
-
+            
             for(String tipoRegistro : mapVendedoresQuantidades.keySet()){
                 for(Account newAccount : newAccounts){
-                
+                    
                     Id vendedor = getVendedorComMenosConta(mapVendedoresQuantidades.get(tipoRegistro));
-
+                    
                     newAccount.Vendedor__c = string.valueOf(vendedor);
-                
+                    
                     Integer quantidade = mapVendedoresQuantidades.get(tipoRegistro).get(vendedor);
                     quantidade++;
-
+                    
                     Map<Id,Integer> putNewMap = new Map<Id,Integer>();
                     putNewMap.put(vendedor,quantidade);
                     mapVendedoresQuantidades.put(tipoRegistro,putNewMap);
                 }
             }
-
+            
         }
         catch(Exception e)
         {
@@ -94,19 +94,19 @@ public without sharing class AccountTriggerHandler {
     
     public static Map<Id,Integer> getVendedor(String recordType){
         
-       
+        
         Map<Id,Integer> mapVendedor = new  Map<Id,Integer>();
-
+        
         List<Vendedor__c> vendedores = new  List<Vendedor__c>();
-
+        
         if(recordType == 'Todos'){
             vendedores =  [SELECT Id, (SELECT Id FROM Accounts__r) FROM Vendedor__c WITH SECURITY_ENFORCED];
         }
         else{
             vendedores =  [SELECT Id, (SELECT Id FROM Accounts__r) FROM Vendedor__c WHERE RecordType.DeveloperName = :recordType WITH SECURITY_ENFORCED];
         }
-
-         
+        
+        
         
         for(Vendedor__c vendedor : vendedores){           
             mapVendedor.put(vendedor.Id,vendedor.Accounts__r.size());
@@ -116,43 +116,70 @@ public without sharing class AccountTriggerHandler {
         
     }
     public static Id getVendedorComMenosConta(Map<Id,Integer> vendedores){
-
+        
         Id vendedorComMenosConta ;
-
+        
         Integer menorQuantidadeAtual =  0;
         for(Id vendedor : vendedores.keySet()){
-
+            
             if((vendedores.get(vendedor) < menorQuantidadeAtual) || (vendedorComMenosConta == null)){
                 menorQuantidadeAtual = vendedores.get(vendedor);
                 vendedorComMenosConta = string.valueOf(vendedor);
             }
-
-        }
-	
-        return vendedorComMenosConta;
-
-    }
-
-    public static void UpdateAddressQueueAble(Account[] newAccounts){
-        try{
-
-            Map<string,List<Account>> filas = new Map<string,List<Account>>();
-
-            Integer currentCount = 0;
-
-            for(Account acc : newAccounts){
-                
-            }
             
-         
-
-
-
-
+        }
+        
+        return vendedorComMenosConta;
+        
+    }
+    
+    public static void updateAddressQueueAble(Account[] newAccounts){
+        try{
+            
+            Map<Integer,List<Account>> queueLists = splitList(newAccounts, 50);
+            
+            for(Integer currentQueue : queueLists.keySet()){
+                
+                ID jobId = System.enqueueJob(new UpdateAccountAddressQueueable(queueLists.get(currentQueue)));
+            }
             
         } catch (Exception exc) {
             System.debug('Ocorreu um erro ao atualizar endereço' + exc.getMessage() + exc.getStackTraceString());
         }
+    }
+    
+    public static Map<Integer,List<Account>> splitList(List<Account> listToSplit,Integer splitSize){
+        
+        Map<Integer,List<Account>> mapToReturn = new Map<Integer,List<Account>>();
+        Integer currentMapIndex = 0;
+        
+        if(listToSplit.size() < splitSize){
+            mapToReturn.put(currentMapIndex, listToSplit);
+            return mapToReturn;
+        }
+        
+        List<Account> listToAddInMap =  new List<Account>();
+        
+        
+        for(Account account : listToSplit){
+            
+            if(listToAddInMap.size() == 50){
+                mapToReturn.put(currentMapIndex, listToAddInMap);
+                listToAddInMap.clear();
+                currentMapIndex++;
+            }
+            
+            listToAddInMap.add(account);
+            
+        }
+        
+        if(listToAddInMap.size() > 0){
+            mapToReturn.put(currentMapIndex, listToAddInMap);
+        }
+        
+        
+        return mapToReturn;
+        
     }
     
     
