--- a/force-app/main/default/classes/ViaCepCalloutTest.cls
+++ b/force-app/main/default/classes/ViaCepCalloutTest.cls
@@ -3,9 +3,9 @@ private class ViaCepCalloutTest {
     @isTest
     static void testGetCallout(){
 
-        Test.setMock(HttpCalloutMock.class, ViaCepHttpCalloutMock);
+        Test.setMock(HttpCalloutMock.class, new ViaCepHttpCalloutMock());
 
-        HttpResponse response = ViaCepCallout.makeGetCallout(13801035);
+        HttpResponse response = ViaCepCallout.makeGetCallout('13801035');
         // Verify that the response received contains fake values
         String contentType = response.getHeader('Content-Type');
         System.assertEquals('application/json',contentType,'Content-Type in response is Wrong');
