Alterado testes definindo mock para o callout do viaCEP

--- a/force-app/main/default/classes/TestAccountTrigger.cls
+++ b/force-app/main/default/classes/TestAccountTrigger.cls
@@ -9,6 +9,7 @@ public with sharing class TestAccountTrigger {
         vendedores.addAll(VendedorDataFactory.criarVendedores(1,'Interno'));
         
         Test.startTest();
+        Test.setMock(HttpCalloutMock.class, new ViaCepHttpCalloutMock());
         insert vendedores;
         insert accountsToInsert;
 
@@ -31,6 +32,7 @@ public with sharing class TestAccountTrigger {
         vendedores.addAll(VendedorDataFactory.criarVendedores(1,'Externo'));
         
         Test.startTest();
+        Test.setMock(HttpCalloutMock.class, new ViaCepHttpCalloutMock());
         insert vendedores;
         insert accountsToInsert;
 
@@ -53,6 +55,7 @@ public with sharing class TestAccountTrigger {
         vendedores.addAll(VendedorDataFactory.criarVendedores(1,'Externo'));
         
         Test.startTest();
+        Test.setMock(HttpCalloutMock.class, new ViaCepHttpCalloutMock());
         insert vendedores;
         insert accountsToInsert;
 
